# empty_space

./: .env.example  .gitignore  README.md  pyproject.toml
config/: symbol_synonyms.yaml
dashboard/: app.js  index.html  style.css
docs/: level-2-summary.md  level-3-summary.md  phase1-summary.md  phase2-summary.md
docs/superpowers/plans/: 2026-04-21-level-2-ledger-retrieval.md  2026-04-21-phase1-infrastructure.md  2026-04-21-phase2-prompt-assembler-runner.md  2026-04-22-level-3-composer.md  2026-04-22-level-4-judge.md
docs/superpowers/specs/: 2026-04-21-level-2-ledger-retrieval.md  2026-04-21-phase2-prompt-assembler-runner.md  2026-04-21-空的空間-design.md  2026-04-22-level-3-composer.md  (+1 more)
experiments/: mother_x_son_act1_hospital.yaml  mother_x_son_act2_car.yaml  mother_x_son_act3_home.yaml  mother_x_son_hospital_v3_001.yaml
scripts/: dashboard_server.py  hello.py  run_experiment.py  smoke_level4.py
src/empty_space/: composer.py  judge.py  ledger.py  llm.py  loaders.py  parser.py  paths.py  prompt_assembler.py  retrieval.py  runner.py  schemas.py  writer.py
tests/: test_composer.py  test_integration_phase1.py  test_judge.py  test_ledger.py  test_llm_gemini.py  test_loaders_experiment.py  test_loaders_persona.py  test_loaders_setting.py  test_loaders_v3.py  test_parser.py  test_paths.py  test_prompt_assembler.py  test_refined_ledger.py  test_retrieval.py  test_runner_integration.py  test_runner_level2.py  test_runner_level4.py  test_schemas_experiment.py  test_schemas_level4.py  test_schemas_persona.py  test_schemas_setting.py  test_writer.py
