[project]
name = "empty-space"
version = "0.1.0"
description = "雙角色觀察實驗台 — The Empty Space"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=0.3",
    "anthropic>=0.40",
    "pyyaml>=6.0",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/empty_space"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-v"
